--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
