--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
+    "axios": "^0.21.1",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
