--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "next": "10.0.8",
+    "node-zendesk": "^2.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-mailchimp-subscribe": "^2.1.3",
