--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.0.8",
     "node-zendesk": "^2.0.5",
     "react": "17.0.1",
+    "react-calendly": "^1.3.1",
     "react-dom": "17.0.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-transition-group": "^4.4.1"
