--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@tailwindcss/typography": "^0.4.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "framer-motion": "^4.1.16",
     "next": "10.0.8",
-    "node-zendesk": "^2.0.5",
+    "node-zendesk": "^2.1.0",
     "react": "17.0.1",
     "react-calendly": "^1.3.1",
     "react-dom": "17.0.1",
+    "react-intersection-observer": "^8.31.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.3"
+    "postcss": "^8.2.15",
+    "tailwindcss": "^2.1.2"
   }
 }
