--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
     "axios": "^0.21.1",
+    "clsx": "^1.2.1",
     "cors": "^2.8.5",
     "framer-motion": "^4.1.16",
     "next": "10.0.8",
