--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "TAILWIND_MODE=watch next dev -p 3001",
     "build": "next build",
     "start": "next start"
   },
@@ -15,7 +15,7 @@
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
     "framer-motion": "^4.1.16",
-    "next": "10.0.8",
+    "next": "^12.3.0",
     "node-zendesk": "^2.1.0",
     "react": "17.0.1",
     "react-calendly": "^1.3.1",
