--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-transition-group": "^4.4.1",
     "redent": "^3.0.0",
+    "remark-parse": "^10.0.1",
     "simple-functional-loader": "^1.2.1",
     "tinytime": "^0.2.6",
     "unist-util-visit": "^2.0.3"
