--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.20.2",
     "@heroicons/react": "^2.0.1",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -20,7 +21,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
-    "framer-motion": "^4.1.16",
+    "framer-motion": "^7.6.5",
     "front-matter": "^4.0.2",
     "minimatch": "^5.1.0",
     "next": "^12.3.0",
@@ -33,7 +34,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-transition-group": "^4.4.1",
     "redent": "^3.0.0",
-    "remark-parse": "^10.0.1",
+    "remark-parse": "^9.0.0",
     "simple-functional-loader": "^1.2.1",
     "tinytime": "^0.2.6",
     "unist-util-visit": "^2.0.3"
