--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "axios": "^0.21.1",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
-    "framer-motion": "^7.6.5",
+    "framer-motion": "2.9.5",
     "front-matter": "^4.0.2",
     "minimatch": "^5.1.0",
-    "next": "^12.3.0",
+    "next": "^12.3.1",
     "node-zendesk": "^2.1.0",
     "prismjs": "^1.29.0",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-calendly": "^1.3.1",
     "react-dom": "17.0.1",
     "react-intersection-observer": "^8.31.1",
