--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "minimatch": "^5.1.0",
     "next": "^12.3.1",
     "node-zendesk": "^2.1.0",
+    "plaiceholder": "^2.5.0",
     "prismjs": "^1.29.0",
     "react": "17.0.2",
     "react-calendly": "^1.3.1",
@@ -35,12 +36,15 @@
     "react-transition-group": "^4.4.1",
     "redent": "^3.0.0",
     "remark-parse": "^9.0.0",
+    "sharp": "^0.31.2",
     "simple-functional-loader": "^1.2.1",
     "tinytime": "^0.2.6",
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "autoprefixer": "^10.2.5",
+    "file-loader": "^6.2.0",
     "postcss": "^8.2.15",
     "tailwindcss": "^3.2.1"
   }
