--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.20.2",
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.1",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
