--- a/package.json
+++ b/package.json
@@ -44,9 +44,22 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^10.4.13",
     "file-loader": "^6.2.0",
     "postcss": "^8.2.15",
     "tailwindcss": "^3.2.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.01%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      ">0.01%",
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
