--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sindresorhus/slugify": "^1.1.1",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.7",
+    "@vercel/analytics": "^0.1.5",
     "axios": "^0.21.1",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
